<resources>
    <string name="app_name">XGN</string>


    <string name="title_profile">我的</string>
    <string name="title_jibu">计步</string>
    <string name="title_tongji">统计</string>


    <string name="feedback">意见反馈</string>
    <string name="service_support">服务支持</string>
    <string name="company_profile">公司简介</string>

    <string name="person_detail">个人资料</string>
    <string name="person_msg">账号信息</string>
    <string name="edit_shoes">编辑</string>
    <string name="family_affection">亲情监护</string>
    <string name="sport_target">运动目标</string>
    <string name="xgn_shop">小公牛商城</string>
    <string name="upgrade">固件升级</string>
    <string name="prevent_loss">手机防丢</string>
    <string name="my_shop">我的鞋子</string>
    <string name="history_trail">轨迹回放</string>
    <string name="about_xgn">关于小公牛</string>
    <string name="band_shoes">已绑定鞋子</string>
    <string name="my_shoes">我的鞋子</string>

    <string name="target_step">目标步数</string>
    <string name="target">目标</string>
    <string name="setting">设置</string>
    <string name="setting_siger">基本信息</string>
    <string name="siger">个人信息</string>
    <string name="step">步</string>
    <string name="quantity_of_heat">热量</string>
    <string name="distance">距离</string>
    <string name="power">设备电量</string>
    <string name="record">数据记录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="regist">注册</string>
    <string name="next">下一步</string>
    <string name="about">关于我们</string>
    <string name="scan">扫一扫</string>

    <string name="input_phone">请输入手机号码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd1">请输入新密码</string>
    <string name="input_new_pwd">请设置您的新密码</string>
    <string name="input_conform_pwd">请确认您的新密码</string>
    <string name="input_regist_pwd">请设置您的密码</string>
    <string name="input_def_pwd">两次密码不一致</string>
    <string name="input_set_pwd">请确认新密码</string>
    <string name="input_regist_conform_pwd">请确认您的密码</string>
    <string name="user_phone_valid">请输入正确的手机号</string>

    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>

</resources>
