<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/x20"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"/>
        <EditText
            android:id="@+id/oldpwdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_old_pwd"
            android:padding="@dimen/x30"
            android:background="@null"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"/>
        <EditText
            android:id="@+id/newpwdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_new_pwd1"
            android:padding="@dimen/x30"
            android:background="@null"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"/>
        <EditText
            android:id="@+id/compwdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_set_pwd"
            android:padding="@dimen/x30"
            android:background="@null"
            android:textSize="14sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_line"/>
    </LinearLayout>
</LinearLayout>